--- a/assets/css/aboutPageCss/aboutPage_section4.css
+++ b/assets/css/aboutPageCss/aboutPage_section4.css
@@ -34,7 +34,7 @@
 .about_sec4_logos {
   display: flex;
   align-items: center;
-  gap: 84px;
+  gap: 80px;
   /* justify-content: space-between; */
   margin-top: 24px;
   width: fit-content;
@@ -151,4 +151,74 @@
   line-height: normal;
   width: fit-content;
   margin: 12px 0;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 768px) {
+  .about_section4 {
+    width: 100%;
+    height: 1600px;
+  }
+
+  .about_sec4_title {
+    font-size: 80px;
+    line-height: 96px;
+    
+  }
+
+  .about_section4_container {
+    margin: 0;
+    text-align: center;
+  }
+
+  .about_section3_text {
+    width: 100%;
+  }
+}
+
+
+/* Add a media query for screens with a maximum width of 480px */
+@media only screen and (max-width: 768px) {
+  .about_sec4_logos {
+    display: flex;
+    flex-wrap: wrap; /* Allow items to wrap to the next row */
+    justify-content: flex-start; /* Start items from the left */
+    align-items: center; /* Center items vertically */
+  }
+
+  .img_about_sec41,
+  .img_about_sec42,
+  .img_about_sec43,
+  .img_about_sec44 {
+    width: calc(50% - 10px); /* Each image takes 50% of the container width with 10px spacing in between */
+    max-width: 200px; /* Optional: Limit the maximum width of each image */
+    height: auto;
+    margin-bottom: 10px; /* Add margin to space the rows */
+  }
+  
+  /* Clear margin for the last image in each row */
+  .img_about_sec42,
+  .img_about_sec44 {
+    margin-right: 0;
+  }
+
+  .img_about_rediimg, .redilogo_text  {
+    width: 100%;
+  }
+
+  .img_about_reditxt {
+    margin: 1em;
+    font-size: 24px;
+  }
+
+  .about_sec4_redi_container {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 768px){
+  .about_section4 {
+    height: 1000px;
+  }
 }
