--- a/assets/css/aboutPageCss/aboutPage_section1.css
+++ b/assets/css/aboutPageCss/aboutPage_section1.css
@@ -64,7 +64,7 @@
 
 /*Media queries*/
 /* Define a breakpoint for small devices */
-@media (max-width: 768px) {
+@media only screen and (max-width: 600px) {
   .about_section1 {
     width: 100%; /* Make the container full-width */
     height: auto; /* Allow height to adjust based on content */
