--- a/assets/css/aboutPageCss/aboutPage_section1.css
+++ b/assets/css/aboutPageCss/aboutPage_section1.css
@@ -104,3 +104,19 @@
     margin: 1rem;
   }
 }
+
+/*Extra small devices*/
+@media only screen and (max-width: 395px) {
+  .about_section1 {
+    text-align: center;
+  }
+
+  .about_sec1_title {
+    width: 100%;
+    left: 0%;
+  }
+
+  .about_sec1_p1 {
+    margin: 0;
+  }
+}
