--- a/assets/css/aboutPageCss/aboutPage_section3.css
+++ b/assets/css/aboutPageCss/aboutPage_section3.css
@@ -123,3 +123,20 @@
     height: auto;
   }
 }
+
+/*Extra small devices*/
+@media only screen and (max-width: 395px) {
+  .about_section3 {
+    margin-top: 2em;
+    text-align: center;
+    height: 1400px;
+  }
+
+  .about_section3_title {
+    left: 0;
+  }
+
+  .about_section3_text {
+    left: 0;
+  }
+}
