--- a/assets/css/aboutPageCss/aboutPage_section2.css
+++ b/assets/css/aboutPageCss/aboutPage_section2.css
@@ -77,23 +77,26 @@
   .about_section2 {
     height: 1200px;
     width: 100%;
+    text-align: center;
   }
 
   .about_section2_title {
     font-size: 80px;
+    left: 20%;
   }
 
   .about_section2_text {
     width: 100%;
     font-size: 24px;
+    left: 0;
 }
 
 .whoweare_img_about_sec2_container {
   width: 100%;
   position: relative;
   height: fit-content;
-  left: 5%;
-  top: 70%;
+  left: 0;
+  top: 60%;
   background-color: transparent;
 }
 
@@ -107,6 +110,7 @@
   justify-content: flex-start;
   row-gap: 1.5em;
 }
+
   }
 
 /*Extra small devices*/
@@ -126,6 +130,28 @@
 
   .whoweare_img_about_sec2_container {
     top: 80%;
+    left: 0;
+  }
+}
+
+@media only screen and (min-width: 425px) and (max-width: 480px) {
+  .whoweare_img_about_sec2_container {
+    top: 75%;
+  }
+}
+
+@media only screen and (min-width: 480px) and (max-width: 520px) {
+  .whoweare_img_about_sec2_container {
+    top: 65%;
   }
 }
   
+@media only screen and (min-width: 425px) and (max-width: 599px) {
+  .about_section2_title {
+    left: 0;
+  }
+
+  .about_section2 {
+    top: -100px;
+  }
+}
