--- a/assets/css/aboutPageCss/aboutPage_section1.css
+++ b/assets/css/aboutPageCss/aboutPage_section1.css
@@ -145,4 +145,10 @@
       margin: 0.5rem;
     }
     
-  } 
+  }
+
+  @media only screen and (min-width: 600px) {
+    .about_sec1_p1 {
+      margin: auto;
+    }
+  }
