--- a/assets/css/aboutPageCss/aboutPage_section2.css
+++ b/assets/css/aboutPageCss/aboutPage_section2.css
@@ -155,3 +155,18 @@
     top: -100px;
   }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 992px){
+  .about_section2 {
+    width: 100%;
+  }
+  .about_section2_text {
+    justify-content: stretch;
+    font-size: 24px;
+  }
+
+  .whoweare_img_about_sec2_container {
+    left: 50px;
+    top: 540px;
+  }
+}
