--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -13,7 +13,7 @@
 .HM_section4 {
   min-height: 909px;
   height: fit-content;
-  width: 100%;
+  width: 1440px;
   text-align: center;
   display: flex;
   flex-direction: column;
