--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -89,7 +89,7 @@ footer {
 .menu {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   position: relative;
   margin-top: 0%;
 }
@@ -231,5 +231,6 @@ footer {
  /*Media queries*/
  @media screen and (min-width: 1024px) {
   .header {
+    width: 1440px;
   }
 }
